<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:padding="20dp"
    tools:context=".view.Login">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/login"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/tvTitle_presentation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/tvSubtitle_presentation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_login"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle_presentation" />

    <TextView
        android:id="@+id/tvSubtitle_presentation1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_login"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword_login" />

    <Button
        android:id="@+id/btnLogin_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:stateListAnimator="@null"
        android:text="@string/btn_login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/btn"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle_presentation1" />

    <TextView
        android:id="@+id/tvSubtitle_presentation2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or_login"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin_login" />

    <Button
        android:id="@+id/btnGoogle_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/red"
        android:stateListAnimator="@null"
        android:text="@string/google_login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/btn"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/btnFacebook_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle_presentation2" />

    <Button
        android:id="@+id/btnFacebook_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blue"
        android:stateListAnimator="@null"
        android:text="@string/facebook_login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/btn"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle_login"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle_presentation2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvLogin_presentation"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/signup_one_login"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_1" />

        <TextView
            android:id="@+id/tvSignup_presentation"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingStart="5dp"
            android:stateListAnimator="@null"
            android:text="@string/signup_two_login"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/etUsername_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/txt_design"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="14dp"
        android:hint="@string/username_login"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_1"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle_presentation" />

    <EditText
        android:id="@+id/etPassword_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/txt_design"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="14dp"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_1"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername_login" />


</androidx.constraintlayout.widget.ConstraintLayout>