<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.Sign_Sucessfull">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/sucessfull"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="100"
            android:progressTint="?attr/colorPrimary"
            android:progressBackgroundTint="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/tvTitle_presentation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_sign_sucessfull"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <TextView
            android:id="@+id/tvSubtitle_presentation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subtitle_sign_sucessfull"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle_presentation" />

        <TextView
            android:id="@+id/tvSubtitle_sucessfull"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="16dp"
            android:text="@string/label1_sign_sucessfull"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle_presentation" />

        <TextView
            android:id="@+id/tvSubtitle_sucessfull1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_share"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/label2_sign_sucessfull"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle_sucessfull" />

        <TextView
            android:id="@+id/tvSubtitle_sucessfull3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_connect"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/label3_sign_sucessfull"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle_sucessfull1" />

        <Button
            android:id="@+id/btnContinue_sign_sucessfull"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:stateListAnimator="@null"
            android:text="@string/btn_sign_sucessfull"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/btn"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>